force-app/main/default/objects/Supply_Purchase__c/Supply_Purchase__c.object-meta.xml
<CustomObject>
    <description>Created By: NH
Business Unit: BLDG Design Users
Purpose: To Track BLDG Supply Purchase.</description>
    <label>Supply Purchase</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Supply Purchase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Purchases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>