force-app/main/default/objects/Supply_Purchase__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>Created By: NH
Business Unit: BLDG Design Users
Purpose: To track the carrier that is shipping the supply.</description>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>FedEX</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
                <isActive>false</isActive>
                <label>DHL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>