force-app/main/default/objects/Supply_Purchase__c/fields/Cart_URL__c.field-meta.xml
<CustomField>
    <fullName>Cart_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Insert URL from purchase website order here</inlineHelpText>
    <label>Cart URL</label>
    <type>Url</type>
</CustomField>