force-app/main/default/objects/Supply_Purchase__c/fields/Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date__c</fullName>
    <description>Created By: NH
Business Unit: BLDG Design Users
Purpose: To track when a supply is expected to arrive.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When is this order expected to arrive?</inlineHelpText>
    <label>Expected Date</label>
    <type>Date</type>
</CustomField>