force-app/main/default/objects/Supply_Purchase__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>Created By: NH
Business Unit: BLDG Users
Purpose: To track when a supply is purchased</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>