force-app/main/default/objects/Supply_Purchase__c/fields/TaskRay_Project__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to TaskRay project that is associated with Supply Purchase</description>
    <label>TaskRay Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>Supply Purchases (TaskRay Project)</relationshipLabel>
    <relationshipName>Supply_Purchases1</relationshipName>
    <type>Lookup</type>
</CustomField>