force-app/main/default/objects/Supply_Purchase__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Area to place tracking number from purchase order</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>