force-app/main/default/objects/Supply_Purchase__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created By: NH
Business Unit: BLDG Design Users
Purpose: To track where a supply is purchased.</description>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Purchases</relationshipLabel>
    <relationshipName>Supply_Purchases</relationshipName>
    <type>Lookup</type>
</CustomField>